--- a/index.html
+++ b/index.html
@@ -60,17 +60,17 @@
       <div class="card">
         <img class="card-img-top" src="img\1-1.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title" style="color: Green; font-weight: bold;">Bootstrap v3.3.6</h5>
+          <h5 class="card-title" style="color: rgb(23, 135, 23); font-weight: bold;">Bootstrap v3.3.6</h5>
           <p class="card-text">Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-        <a style="background-color: green;" class="cardbtn" href="#section1">Button Green</a>
+        <a style="background-color: rgb(23, 135, 23);" class="cardbtn" href="#section1">Button Green</a>
         </div>
       </div>
       <div class="card">
         <img class="card-img-top" src="img\1-2.jpg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title" style="color: blue; font-weight: bold;">Responsive Design</h5>
+          <h5 class="card-title" style="color: rgb(0, 163, 184); font-weight: bold;">Responsive Design</h5>
           <p class="card-text">Conquer Template is provided by templatemo for free of charge. You can use this template for any kind of website. No credit link is required. All images by Unsplash. Thank you for visiting our website. Please come again!.</p>
-          <a class="cardbtn" style="background-color: blue" href="#section1">See Details</a>
+          <a class="cardbtn" style="background-color: rgb(0, 163, 184)" href="#section1">See Details</a>
         </div>
       </div>
       <div class="card">
@@ -78,7 +78,7 @@
         <div class="card-body">
           <h5 class="card-title" style="color: grey; font-weight: bold;">Parallax Layout</h5>
           <p class="card-text">Morbi sagittis justo a velit placerat ullamcorper quis quis velit. Sed convallis at risus ullamcorper auctor. Praesent quis velit neque. Quisque semper porta nisi vitae suscipit. Duis lectus magna, ornare ac scelerisque.</p>
-      <a style="background-color: red;" class="cardbtn" href="#section1">Button Red</a>
+      <a style="background-color: rgb(159, 17, 17);" class="cardbtn" href="#section1">Button Red</a>
         </div>
       </div>
        </div>
