--- a/index.html
+++ b/index.html
@@ -108,6 +108,55 @@
     </div>
   </div>
   </div>
+  <!-- section3 ends -->
+  <!-- section 4 starts -->
+
+  <div id="#section4" style="margin-top: 80px;">
+    <img src="img/bg-2.jpg" height="350px" width="1700px">
+  </div>
+
+    <h2 class="head2">Our Services</h2>
+    <p class="para2">Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id 
+    <br>
+    
+    felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia. 
+    <br>
+    
+    Etiam a mi quis arcu varius condimentum.
+  </p>
+
+<!-- section 4 ends -->
+<!-- section 5 starts -->
+<div id="#section5" class="d-flex justify-content-around" style="margin-left: 150px;margin-right: 150px;">
+  <div class="card" style="width: 16rem;  background-color: rgb(244, 239, 239); margin-top: 0px;">
+    <img class="card-img-top" src="img\4-1.jpg" alt="Card image cap">
+    <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center; margin-top: 15px;margin-bottom: 0px;">Column One</h5>
+    <div class="card-body">
+      <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+    <img class="card-img-top" src="img\4-2.jpg" alt="Card image cap">
+    <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px;margin-bottom: 0px;">Column Two </h5>
+    <div class="card-body">
+      <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+    <img class="card-img-top" src="img\4-3.jpg" alt="Card image cap">
+    <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px;margin-bottom: 0px;">Column Three</h5>
+    <div class="card-body">
+      <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+    </div>
+  </div>
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+    <img class="card-img-top" src="img\4-4.jpg" alt="Card image cap">
+    <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px; margin-bottom: 0px;">Column Four </h5>
+    <div class="card-body">
+      <p class="card-text" style="padding-top:0px ;">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+    </div>
+  </div>
+</div>
   
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
