--- a/index.html
+++ b/index.html
@@ -132,14 +132,15 @@
     <img class="card-img-top" src="img\4-1.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center; margin-top: 15px;margin-bottom: 0px;">Column One</h5>
     <div class="card-body">
-      <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
+      <p class="card-text" >Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
     </div>
   </div>
   <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
     <img class="card-img-top" src="img\4-2.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px;margin-bottom: 0px;">Column Two </h5>
     <div class="card-body">
-      <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+      <p class="card-text"style="padding-bottom: 20px;">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+      <a href="#" class="readit">Read It</a>
     </div>
   </div>
   <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
@@ -153,10 +154,24 @@
     <img class="card-img-top" src="img\4-4.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px; margin-bottom: 0px;">Column Four </h5>
     <div class="card-body">
-      <p class="card-text" style="padding-top:0px ;">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+      <p class="card-text" style="padding-bottom: 20px;">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis.</p>
+      <a href="#" class="readit">Details</a>
     </div>
   </div>
 </div>
+<!-- section 5 ends -->
+<!-- section 6 starts -->
+<div class="card mb-3">
+  <img class="card-img-top" src="img\4-5.jpg" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+
+
+<!-- section 6 ends -->
   
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
