--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
   <!-- section3 ends -->
   <!-- section 4 starts -->
 
-  <div id="#section4" style="margin-top: 80px;">
-    <div>
+  <div id="section4">
+    <div style="margin-top: 80px;">
       
       <img src="img/bg-2.jpg" height="350px" width="1700px">
       
@@ -165,7 +165,7 @@
 <!-- section 5 ends -->
 <!-- section 6 starts -->
 <div id="section6">
-  <div class="card mb-3"style="background-color: rgb(244, 239, 239);">
+  <div class="card mb-3"style="background-color: rgb(244, 239, 239); padding-bottom: 20px; ">
     <img class="card-img-top" src="img\4-5.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title" style="color: rgb(100, 98, 98);font-weight: bold;">One Big Column</h5>
