--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
    <div id="section2">
      <div class="card-deck">
-      <div class="card" style=" background-color: rgb(244, 239, 239);font-family: Open Sans, Helvetica, Arial, sans-serif;">
+      <div class="card" style=" background-color: rgb(244, 239, 239);font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-1.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: rgb(23, 135, 23); font-weight: bold;">Bootstrap v3.3.6</h5>
@@ -65,7 +65,7 @@
         <a style="background-color: rgb(23, 135, 23);" class="cardbtn" href="#section1">Button Green</a>
         </div>
       </div>
-      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;">
+      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-2.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: rgb(0, 163, 184); font-weight: bold;">Responsive Design</h5>
@@ -73,7 +73,7 @@
           <a class="cardbtn" style="background-color: rgb(0, 163, 184)" href="#section1">See Details</a>
         </div>
       </div>
-      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;">
+      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-3.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: grey; font-weight: bold;">Parallax Layout</h5>
@@ -85,7 +85,7 @@
    </div>
 <!-- section3 starts -->
    <div id="section3">
-   <div class="card mb-3" style="width: 550px; background-color: rgb(244, 239, 239);">
+   <div class="card mb-3" style="width: 550px; background-color: rgb(244, 239, 239);border: 1px solid white;">
     <img class="card-img-top" src="img\2-1.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title" style="color: rgb(63, 62, 62); font-weight: bold; text-align: center;">Two Column Left Side</h5>
@@ -96,7 +96,7 @@
       
     </div>
   </div>
-  <div class="card mb-3" style="width: 550px;  background-color: rgb(244, 239, 239);">
+  <div class="card mb-3" style="width: 550px;  background-color: rgb(244, 239, 239);border: 1px solid white;">
     <img class="card-img-top" src="img\2-2.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title" style="color: rgb(63, 62, 62); font-weight: bold; text-align: center;">Two Column Right Side</h5>
@@ -131,14 +131,14 @@
 <!-- section 4 ends -->
 <!-- section 5 starts -->
 <div id="#section5" class="d-flex justify-content-around" style="margin-left: 150px;margin-right: 150px;">
-  <div class="card" style="width: 16rem;  background-color: rgb(244, 239, 239); margin-top: 0px;">
+  <div class="card" style="width: 16rem;  background-color: rgb(244, 239, 239); margin-top: 0px;border: 1px solid white;">
     <img class="card-img-top" src="img\4-1.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center; margin-top: 15px;margin-bottom: 0px;">Column One</h5>
     <div class="card-body">
       <p class="card-text" >Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
     </div>
   </div>
-  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);border: 1px solid white;">
     <img class="card-img-top" src="img\4-2.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px;margin-bottom: 0px;">Column Two </h5>
     <div class="card-body">
@@ -146,14 +146,14 @@
       <a href="#" class="readit">Read It</a>
     </div>
   </div>
-  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);border: 1px solid white;">
     <img class="card-img-top" src="img\4-3.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px;margin-bottom: 0px;">Column Three</h5>
     <div class="card-body">
       <p class="card-text">Ut ac odio scelerisque ante ornare commodo. Sed faucibus dui libero, in tincidunt purus pretium quis. Fusce posuere egestas enim eu viverra.</p>
     </div>
   </div>
-  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);">
+  <div class="card" style="width: 16rem; background-color: rgb(244, 239, 239);border: 1px solid white;">
     <img class="card-img-top" src="img\4-4.jpg" alt="Card image cap">
     <h5 class="card-title" style="color: grey; font-weight: bold; text-align: center;margin-top: 15px; margin-bottom: 0px;">Column Four </h5>
     <div class="card-body">
@@ -165,7 +165,7 @@
 <!-- section 5 ends -->
 <!-- section 6 starts -->
 <div id="section6">
-  <div class="card mb-3"style="background-color: rgb(244, 239, 239); padding-bottom: 20px; ">
+  <div class="card mb-3"style="background-color: rgb(244, 239, 239); padding-bottom: 20px; border: 1px solid white;">
     <img class="card-img-top" src="img\4-5.jpg" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title" style="color: rgb(100, 98, 98);font-weight: bold;">One Big Column</h5>
@@ -181,6 +181,35 @@
 
 
 <!-- section 6 ends -->
+<!-- section 7 starts -->
+<div id="section7">
+  <div class="contact">
+    <img src="img\bg-3.jpg" height="100%" width="100%">
+
+  </div>
+  <h3 class="head3">Contact Form </h3>
+  <p class="para3">Nunc diam leo, fringilla vulputate elit lobortis, consectetur vestibulum quam. Sed id
+    <br>
+    felis ligula. In euismod libero at magna dapibus, in rutrum velit lacinia.
+    <br>
+    Etiam a mi quis arcu varius condimentum.
+  </p>
+  <div class="col-sm-6">
+  <div class=" d-flex flex-column contactform " style="width: 300px; height : 120px; justify-content : space-between;"> 
+    <input name="name" type="text" id="name" placeholder="Name">
+    <input name="email" type="email" id="email" placeholder="Email">
+    <input name="subject" type="text" id="subject" placeholder="Subject">
+  </div>
+</div>
+
+<div class="col-sm-6">
+  <textarea name="message" rows="6" id="comment" placeholder="Your message here...">
+
+  </textarea>
+</div>
+</div>
+
+<!-- section 7 ends  -->
   
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
