--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;300;400;500;600&family=Josefin+Sans:ital,wght@0,300;0,400;1,300;1,400&family=Lobster&family=Passions+Conflict&family=Poppins:ital,wght@0,300;0,500;1,200;1,300&display=swap" rel="stylesheet">
+
     <title>HomePage</title>
 </head>
 <body>
@@ -56,9 +57,9 @@
       </p>
          </div>
     </div>
-   <div id="section2">
-     <div class="card-deck">
-      <div class="card" style=" background-color: rgb(244, 239, 239);font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
+   <div id="section2" >
+     <div class="card-deck row" >
+      <div class="card col-sm-12 col-md-4" style=" background-color: rgb(244, 239, 239);font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-1.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: rgb(23, 135, 23); font-weight: bold;">Bootstrap v3.3.6</h5>
@@ -66,7 +67,7 @@
         <a style="background-color: rgb(23, 135, 23);" class="cardbtn" href="#section1">Button Green</a>
         </div>
       </div>
-      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
+      <div class="card col-sm-12 col-md-4" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-2.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: rgb(0, 163, 184); font-weight: bold;">Responsive Design</h5>
@@ -74,7 +75,7 @@
           <a class="cardbtn" style="background-color: rgb(0, 163, 184)" href="#section1">See Details</a>
         </div>
       </div>
-      <div class="card" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
+      <div class="card col-sm-12 col-md-4" style=" background-color: rgb(244, 239, 239); font-family: Open Sans, Helvetica, Arial, sans-serif;border: 1px solid white;">
         <img class="card-img-top" src="img\1-3.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title" style="color: grey; font-weight: bold;">Parallax Layout</h5>
